omsrcapi: forms cfg: %IniField 可用於 request 的設定; 調整 RPT.TwsRpt, TwfRpt, TwfRptQ 的 Ini 欄位;

--- a/f9omsrc/forms/ApiTwf9Rpt.cfg
+++ b/f9omsrc/forms/ApiTwf9Rpt.cfg
@@ -27,15 +27,19 @@ $include: ApiTwf0Rpt.cfg
 #   * request abandon 沒有對應的 order
 #   * 有額外的 2 個沒放進 seed::Fields 的欄位: ErrCode, AbandonReason
 #
-$RptTwf9NewFields = {
+$RptTwf9IniFields = {
   $RptTwf0NewFields
   SalesNo
-  IniBidQty/BidQty
   BidPri
-  IniOfferQty/OfferQty
   OfferPri
   TimeInForce, $Tx_TimeInForceQ
 }
+$RptTwf9NewFields = {
+  $RptTwf9IniFields
+  IniBidQty/BidQty
+  IniOfferQty/OfferQty
+}
+
 RPT.TwfNewQ : abandon {
   $RptTwf9NewFields
   ErrCode/ = %AbandonErrCode
@@ -68,7 +72,9 @@ RPT.TwfNewQ {
   ${Ex_Rpt_TwfNewQ:-}
 }
 RPT.TwfRptQ {
-  $RptTwf9NewFields
+  $RptTwf9IniFields
+  IniBidQty   /= %IniField:BidQty
+  IniOfferQty /= %IniField:OfferQty
   ${Ex_Rpt_TwfRptQ:-}
 }
 RPT.TwfChgQ {
