--- a/f9omsrc/forms/ApiTwsRpt.cfg
+++ b/f9omsrc/forms/ApiTwsRpt.cfg
@@ -26,7 +26,7 @@ $include: ApiBase.cfg
 #   * request abandon 沒有對應的 order
 #   * 有額外的 2 個沒放進 seed::Fields 的欄位: ErrCode, AbandonReason
 #
-$RptTwsNewFields = {
+$RptTwsIniFields = {
   $RptOrdKey
   $RptReqBase
   $RptReqFrom
@@ -35,11 +35,14 @@ $RptTwsNewFields = {
   SalesNo
   Side
   Symbol
-  IniOType/OType
-  IniQty/Qty
   Pri
   PriType
   TimeInForce
+}
+$RptTwsNewFields = {
+  $RptTwsIniFields
+  IniOType/OType
+  IniQty/Qty
 }
 RPT.TwsNew : abandon {
   $RptTwsNewFields
@@ -74,7 +77,11 @@ RPT.TwsNew {
   ${Ex_Rpt_TwsNew:-}
 }
 RPT.TwsRpt {
-  $RptTwsNewFields
+  $RptTwsIniFields  
+  BeforeQty
+  AfterQty/Qty
+  IniOType/= %IniField:OType
+  IniQty  /= %IniField:Qty
   ${Ex_Rpt_TwsRpt:-}
 }
 RPT.TwsChg {
