--- a/f9omsrc/forms/ApiTwf1Rpt.cfg
+++ b/f9omsrc/forms/ApiTwf1Rpt.cfg
@@ -27,15 +27,18 @@ $include: ApiTwf0Rpt.cfg
 #   * request abandon 沒有對應的 order
 #   * 有額外的 2 個沒放進 seed::Fields 的欄位: ErrCode, AbandonReason
 #
-$RptTwf1NewFields = {
+$RptTwf1IniFields = {
   $RptTwf0NewFields
   SalesNo
   Side
-  IniPosEff/PosEff
-  IniQty/Qty
   Pri
   PriType
   IniTimeInForce/TimeInForce
+}
+$RptTwf1NewFields = {
+  $RptTwf1IniFields
+  IniPosEff/PosEff
+  IniQty/Qty
 }
 RPT.TwfNew : abandon {
   $RptTwf1NewFields
@@ -70,7 +73,9 @@ RPT.TwfNew {
   ${Ex_Rpt_TwfNew:-}
 }
 RPT.TwfRpt {
-  $RptTwf1NewFields
+  $RptTwf1IniFields
+  IniPosEff /= %IniField:PosEff
+  IniQty    /= %IniField:Qty
   ${Ex_Rpt_TwfRpt:-}
 }
 RPT.TwfChg {
