Add FromB50: 匯入收盤後未成交委託 = 期交所刪單;

--- a/f9omsrc/forms/ApiTwf1Rpt.cfg
+++ b/f9omsrc/forms/ApiTwf1Rpt.cfg
@@ -74,6 +74,8 @@ RPT.TwfNew {
 }
 RPT.TwfRpt {
   $RptTwf1IniFields
+  BeforeQty
+  AfterQty/Qty
   IniPosEff /= %IniField:PosEff
   IniQty    /= %IniField:Qty
   ${Ex_Rpt_TwfRpt:-}
