交易線路斷線後回復, 將對方未收到的要求, 設定為失敗 OmsErrCode_FailSending(902);

--- a/OmsErrCode/OmsErrCode.00xxx.cfg
+++ b/OmsErrCode/OmsErrCode.00xxx.cfg
@@ -49,3 +49,4 @@
 
 00900 = No ready line                   | 無可用的下單連線
 00901 = The order has expired           | 下單要求過期了
+00902 = Line broken rejected            | 送出後斷線,且未送達交易所
