ec=900 增加 Lg=線路群組名稱: 無可用的下單連線:{:Lg:}

--- a/OmsErrCode/OmsErrCode.00xxx.cfg
+++ b/OmsErrCode/OmsErrCode.00xxx.cfg
@@ -47,6 +47,6 @@
 00505 = OrdNoMap not found              | 委託書號對照表沒找到,可能是 MarketId 或 SessionId 不正確,或系統沒設定
 00506 = OrdTeam deny                    | 無此委託櫃號權限
 
-00900 = No ready line                   | 無可用的下單連線
+00900 = No ready line                   | 無可用的下單連線:{:Lg:}
 00901 = The order has expired           | 下單要求過期了
 00902 = Line broken rejected            | 送出後斷線,且未送達交易所
