修正使用 UtwOmsCore.cpp 啟動 twf 可能 crash 的問題。

--- a/OmsErrCode/OmsErrCode.10xxx.cfg
+++ b/OmsErrCode/OmsErrCode.10xxx.cfg
@@ -22,6 +22,8 @@ $FAMT = U8:,
 # --------------------------------------------
 10000 = Ivr not found                  | 找不到下單帳號(或帳號未啟用)
 10001 = Bad OType                      | OType 不正確或不支援
+10002 = Ivac stop:{:Reason:}           | 帳號停用,原因={:Reason:}
+10003 = Subac stop:{:Reason:}          | 停用子帳,原因={:Reason:}
 
 10101 = Symbol not found               | 找不到商品資料
 10102 = Symbol price not found         | 參考價不存在,不可交易
@@ -39,6 +41,15 @@ $FAMT = U8:,
 10108 =                                | 商品禁止下單,原因={:DenyReason:ES:{S1=全額交割|S2=全額分盤|W1=處置股票|W2=再次處置股票|W3=彈性處置股票|C3=創新板|c=外幣商品|k=商品種類}:}
 10109 =                                | 原為市價單,不可改價
 10110 =                                | 不可改為市價
+10111 = {
+en: Contract deny:{:DenyReason:ES:{U=Unlisted|P=Pause|i=Broker}:}
+zh: 契約禁止下單,原因={:DenyReason:ES:{U=即將上市|P=暫停交易|i=券商內控}:}
+}
+# EndDate=YYYYMMDD
+10112 = {
+en: Expired product, EndDate={:EndDate:}
+zh: 過期商品,到期日={:EndDate:}
+}
 
 # --------------------------------------------
 10150 = Bad qty                        | 數量有誤(數量不可<=0)
