Add: 期權風控基礎建設。

--- a/f9omsrc/forms/ApiTwf1Rpt.cfg
+++ b/f9omsrc/forms/ApiTwf1Rpt.cfg
@@ -100,6 +100,8 @@ RPT.TwfFil2 {
   MatchQty /Qty
   MatchPri1/Pri
   MatchPri2/PriLeg2
+  QtyCanceled
+  ErrCode
   ${Ex_Rpt_TwfFil2:-}
 }
 ###########################################################
