Add: 保證金、權利金、幣別、交易稅... 相關匯入及設定。

--- a/f9omstwf/CMakeLists.txt
+++ b/f9omstwf/CMakeLists.txt
@@ -5,9 +5,13 @@ set(f9omstwf_src
  OmsTwfExgMapMgr_F02.cpp
  OmsTwfExgMapMgr_ContractRef.cpp
  OmsTwfExgMapMgr_P13.cpp
- OmsTwfExgSymbBasic.cpp
  OmsTwfExgMapMgr_N09.cpp
+ OmsTwfExgMapMgr_C01.cpp
+ OmsTwfExgMapMgr_C11.cpp
+ OmsTwfExgMapMgr_P14.cpp
  TwfIvacScRule.cpp
+ TwfCurrencyIndex.cpp
+ OmsTwfExgSymbBasic.cpp
 
  OmsTwfSenderStepG1.cpp
 # OmsTwfSenderStepLg.cpp
