--- a/f9omstwf/TwfIvacScRule.cfg
+++ b/f9omstwf/TwfIvacScRule.cfg
@@ -3,11 +3,11 @@
 # 台灣期交所 IvacNoFlag 風控規則設定
 ####################################
 #
-# IvacNoFlag = IvacKind,PsUnlimit,CurrencyRule
+# IvacNoFlag = TwfIvacKind,PsUnlimit,RiskC,CurrencyRule
 #
-# 未設定的 = 0, ,   # 自然人,要控管部位上限,非境外幣別規則
+# 未設定的 = 0, ,C,   # 自然人,要控管部位上限,RiskC,非境外幣別規則
 #
-# - IvacKind 投資人身份, 可用於: 部位上限等級
+# - TwfIvacKind 投資人身份, 可用於: 部位上限等級
 #     0: 自然人
 #     1: 法人
 #     2: 期貨自營商
@@ -16,71 +16,55 @@
 # - PsUnlimit 部位上限不控管(例: 避險帳戶)
 #     Y: 部位上限不控管
 #
+# - RiskC 設定為 C 表示: 需要收取: 混合部位風險保證金.
+#   自然人:   1,3,7,I,J,U,V
+#   一般法人: 0,W
+#
 # - CurrencyRule
-#   境外投資人身分碼：A.F.J.T.V.t.r.q.p.o.f
-#   
-#   【境外投資人】
-#   只要該約當幣別夠即可下單
-#   
-#   【非境外投資人】
-#   #計價產品TWD
-#   1. 台幣
-#   2. 約當台幣排除人民幣
-#   約當台幣為美金、日幣、人民幣、台幣總換算為台幣等值
-#   以上兩者比大小，取小值作為可動用金額
-#   
-#   #計價產品USD
-#   約當美金排除人民幣
-#   約當美金為美金、日幣、人民幣、台幣總換算為美金等值
-#   
-#   #計價產品CNY
-#   1. 人民幣
-#   2. 約當人民幣
-#   約當人民幣為美金、日幣、人民幣、台幣總換算為人民幣等值
-#   以上兩者比大小，取小值作為可動用金額
-#   
-#   #計價產品JPY
-#   約當日幣
-#   約當日幣為美金、日幣、人民幣、台幣總換算為日幣等值
+#    設定為 F 表示 [境外幣別規則], 境外投資人身分碼：A,F,J,T,V,t,r,q,p,o,f;
 ####################################
-0 = 1, ,    # 本國法人
-1 = 0, ,    # 本國自然人
-2 = 2, ,    # 期貨自營商交易帳戶
-3 = 0, ,    # 期貨商內部人員
-4 = 1, ,    # 期貨商錯帳帳戶
-5 = 1, ,    # 結算會員部位處理專戶
-6 = 1, ,    # 結算會員違約處理專戶
-7 = 0, ,    # 期貨交易輔助人內部人員
-8 = 3, ,    # 造市者
-9 = 0, ,    # 註銷帳戶
-A = 1, ,    # 境外外國機構投資人
-a = 1,Y,    # 境外外國機構投資人[避險帳戶]
-B = 1, ,    # 境內外國機構投資人
-b = 1,Y,    # 境內外國機構投資人[避險帳戶]
-C = 1, ,    # 期貨經理事業接受共同委任全權委託帳戶
-c = 1,Y,    # 境外外國期貨商[避險綜合帳戶]
-D = 1, ,    # 銀行
-d = 1,Y,    # 國內法人[避險帳戶]
-E = 1, ,    # 本國證券投信於國外募集之非期貨基金
-f = 1, ,    # 境外外國期貨商綜合帳戶
-G = 1, ,    # 本國證券投信於國內募集之非期貨基金
-H = 1, ,    # 證券商
-I = 0, ,    # 境內華僑及外國自然人
-J = 0, ,    # 境外華僑及外國自然人
-K = 1, ,    # 專營期貨經紀商
-L = 1, ,    # 政府基金
-M = 1, ,    # 保險公司
-N = 1, ,    # 期貨信託基金
-O = 1, ,    # 證券投顧投信接受全權委託投資法人帳戶
-P = 0, ,    # 證券投顧投信接受全權委託投資自然人帳戶
-Q = 1, ,    # 期貨經理事業接受全權委託法人帳戶 委託人為國內法人或境內外國機構投資人
-q = 1, ,    # 期貨經理事業接受全權委託法人帳戶 委託人為境外外國機構投資人
-R = 0, ,    # 期貨經理事業接受全權委託自然人帳戶 委託人為本國自然人、境內華僑或境內外國自然人
-r = 0, ,    # 期貨經理事業接受全權委託自然人帳戶 委託人為境外華僑或境外外國自然人
-S = 1, ,    # 境內大陸地區機構投資人
-T = 1, ,    # 境外大陸地區機構投資人
-U = 0, ,    # 境內大陸地區自然人
-V = 0, ,    # 境外大陸地區自然人
-W = 1, ,    # 期貨商、期貨交易輔助人內部人員法人帳戶
-Y = 1, ,    # 期貨商備援帳戶
-Z = 1, ,    # 期貨商受援帳戶
+0 = 1, ,C,        # 本國法人
+1 = 0, ,C,        # 本國自然人
+2 = 2, , ,        # 期貨自營商交易帳戶
+3 = 0, ,C,        # 期貨商內部人員
+4 = 1, , ,        # 期貨商錯帳帳戶
+5 = 1, , ,        # 結算會員部位處理專戶
+6 = 1, , ,        # 結算會員違約處理專戶
+7 = 0, ,C,        # 期貨交易輔助人內部人員
+8 = 3, , ,        # 造市者
+9 = 0, , ,        # 註銷帳戶
+A = 1, , ,F       # 境外外國機構投資人
+a = 1,Y, ,        # 境外外國機構投資人[避險帳戶]
+B = 1, , ,        # 境內外國機構投資人
+b = 1,Y, ,        # 境內外國機構投資人[避險帳戶]
+C = 1, , ,        # 期貨經理事業接受共同委任全權委託帳戶
+c = 1,Y, ,        # 境外外國期貨商[避險綜合帳戶]
+D = 1, , ,        # 銀行
+d = 1,Y, ,        # 國內法人[避險帳戶]
+E = 1, , ,        # 本國證券投信於國外募集之非期貨基金
+F =  , , ,F
+f = 1, , ,F       # 境外外國期貨商綜合帳戶
+G = 1, , ,        # 本國證券投信於國內募集之非期貨基金
+H = 1, , ,        # 證券商
+I = 0, ,C,        # 境內華僑及外國自然人
+J = 0, ,C,F       # 境外華僑及外國自然人
+K = 1, , ,        # 專營期貨經紀商
+L = 1, , ,        # 政府基金
+M = 1, , ,        # 保險公司
+N = 1, , ,        # 期貨信託基金
+O = 1, , ,        # 證券投顧投信接受全權委託投資法人帳戶
+o =  , , ,F
+P = 0, , ,        # 證券投顧投信接受全權委託投資自然人帳戶
+p =  , , ,F
+Q = 1, , ,        # 期貨經理事業接受全權委託法人帳戶 委託人為國內法人或境內外國機構投資人
+q = 1, , ,F       # 期貨經理事業接受全權委託法人帳戶 委託人為境外外國機構投資人
+R = 0, , ,        # 期貨經理事業接受全權委託自然人帳戶 委託人為本國自然人、境內華僑或境內外國自然人
+r = 0, , ,F       # 期貨經理事業接受全權委託自然人帳戶 委託人為境外華僑或境外外國自然人
+S = 1, , ,        # 境內大陸地區機構投資人
+T = 1, , ,F       # 境外大陸地區機構投資人
+t =  , , ,F
+U = 0, ,C,        # 境內大陸地區自然人
+V = 0, ,C,F       # 境外大陸地區自然人
+W = 1, ,C,        # 期貨商、期貨交易輔助人內部人員法人帳戶
+Y = 1, , ,        # 期貨商備援帳戶
+Z = 1, , ,        # 期貨商受援帳戶
