修改: 匯率 ToCurrency 改成 FromCurrency; 便於商品幣別計算保證金。

--- a/OmsErrCode/OmsErrCode.10xxx.cfg
+++ b/OmsErrCode/OmsErrCode.10xxx.cfg
@@ -71,6 +71,8 @@ zh: 過期商品,到期日={:EndDate:}
 10115 = Taifex N06 {:Id:} Short limit={:Limit:}       | 期交所N06通知{:Id:}空方已達上限{:Limit:}
 10116 = Long position over={:Over:}, limit={:Limit:}  | 部位限制多方超過{:Over:}口,上限{:Limit:}口
 10117 = Short position over={:Over:}, limit={:Limit:} | 部位限制空方超過{:Over:}口,上限{:Limit:}口
+10120 =                                               | 下單帳號保證金超過{:Over:},可用{:Limit:},此筆新增{:Add:}
+10121 =                                               | 母帳保證金超過{:Over:},可用{:Limit:},此筆新增{:Add:}
 
 # --------------------------------------------
 10150 = Bad qty                        | 數量有誤(數量不可<=0)
