重構線路群組; 增加 Twf 線路群組;

--- a/f9omstwf/CMakeLists.txt
+++ b/f9omstwf/CMakeLists.txt
@@ -14,7 +14,7 @@ set(f9omstwf_src
  OmsTwfExgSymbBasic.cpp
 
  OmsTwfSenderStepG1.cpp
-# OmsTwfSenderStepLg.cpp
+ OmsTwfSenderStepLgMgr.cpp
 
  OmsTwfTradingLineMgr.cpp
  OmsTwfTradingLineTmp.cpp
