條件單基礎建設

--- a/OmsErrCode/OmsErrCode.00xxx.cfg
+++ b/OmsErrCode/OmsErrCode.00xxx.cfg
@@ -20,6 +20,7 @@
 00120 = Bad MarketId                    | 不認識的 MarketId,無法決定下單要求要送到何處
 00121 = Bad MarketId symbol not found   | 新單沒有填 MarketId,且找不到商品資料,無法自動填 MarketId
 00122 = Bad symbol MarketId             | 新單沒有填 MarketId,且商品資料的 MarketId 不正確
+00113 = TradingSession Closed           | 已收盤
 
 00130 = Bad LgOut                       | 不正確的 LgOut 線路群組設定
 
@@ -50,3 +51,4 @@
 00900 = No ready line                   | 無可用的下單連線:{:Lg:}
 00901 = The order has expired           | 下單要求過期了
 00902 = Line broken rejected            | 送出後斷線,且未送達交易所
+00903 = Market data broken              | 行情線路無資料
