--- a/OmsErrCode/OmsErrCode.10xxx.cfg
+++ b/OmsErrCode/OmsErrCode.10xxx.cfg
@@ -144,3 +144,12 @@ zh: 券庫存不足 {:Over:$FQTY:}: 庫存={:Bal:$FQTY:}/買未成交={:Leaves:$
 
 # --------------------------------------------
 10800 = Related stock | 利害關係人股票禁止下單
+
+# --------------------------------------------
+# 11101..11107 需對應 10101..10107 的錯誤碼.
+11101 = Cond Symbol not found           | 找不到條件單觸發商品
+11103 = Bad CondPri                     | 條件單觸發價沒填格
+11104 = CondPri Over PriUpLmt:{:UpLmt:} | 條件單觸發價,超過漲停價:{:UpLmt:}
+11105 = CondPri Over PriDnLmt:{:DnLmt:} | 條件單觸發價,超過跌停價:{:DnLmt:}
+11107 = CondPri tick size not matched   | 條件單觸發價,檔位有誤
+11999 = Bad CondOp                      | 條件單參數有誤
