子母單機制(https://docs.google.com/document/d/1mVKBRPoR98nFoOqRpgCWCzYp-JSLLmyyl9YwQmVZZ1g/edit#)

--- a/OmsErrCode/OmsErrCode.00xxx.cfg
+++ b/OmsErrCode/OmsErrCode.00xxx.cfg
@@ -9,6 +9,7 @@
 
 00010 = Request step not found          | 沒有定義下單流程
 00011 = Unknown request type            | 下單要求型別有誤,或不是「下單流程」所期望的「下單要求」
+00012 = Bad request at this order       | 改單要求不支援此種委託
 
 00100 = Bad BrkId                       | 下單要求的 BrkId 找不到對應的券商資料
 00101 = Bad OrdNo                       | 不是新單要求,必須提供 OrdNo
@@ -16,11 +17,11 @@
 00110 = Bad SessionId                   | SessionId 不正確
 00111 = Bad SessionId symbol not found  | 新單沒有填 SessionId,且找不到商品資料,無法自動填 SessionId
 00112 = Bad symbol SessionId            | 新單沒有填 SessionId,且商品資料的 SessionId 不正確
+00113 = TradingSession Closed           | 已收盤
 
 00120 = Bad MarketId                    | 不認識的 MarketId,無法決定下單要求要送到何處
 00121 = Bad MarketId symbol not found   | 新單沒有填 MarketId,且找不到商品資料,無法自動填 MarketId
 00122 = Bad symbol MarketId             | 新單沒有填 MarketId,且商品資料的 MarketId 不正確
-00113 = TradingSession Closed           | 已收盤
 
 00130 = Bad LgOut                       | 不正確的 LgOut 線路群組設定
 
@@ -52,3 +53,4 @@
 00901 = The order has expired           | 下單要求過期了
 00902 = Line broken rejected            | 送出後斷線,且未送達交易所
 00903 = Market data broken              | 行情線路無資料
+00904 = Abandon before run              | 取消於系統執行前
