--- a/OmsErrCode/OmsErrCode.All.cfg
+++ b/OmsErrCode/OmsErrCode.All.cfg
@@ -5,6 +5,7 @@
 #
 $include: OmsErrCode.00xxx.cfg
 $include: OmsErrCode.10xxx.cfg
+$include: OmsErrCode.12xxx.cfg
 
 $include: OmsErrCode.20xxx.cfg
 $include: OmsErrCode.22xxx.cfg
