--- a/f9omstw/CMakeLists.txt
+++ b/f9omstw/CMakeLists.txt
@@ -54,6 +54,8 @@ set(f9omstw_src
 
  OmsMdEvent.cpp
  OmsCxRequest.cpp
+ OmsParentOrder.cpp
+ OmsParentRequest.cpp
 )
 add_library(f9omstw_s STATIC ${f9omstw_src})
 target_link_libraries(f9omstw_s fon9_s pthread dl)
