OmsRcApi forms: 完整中文訊息.

--- a/f9omsrc/forms/ApiBase.cfg
+++ b/f9omsrc/forms/ApiBase.cfg
@@ -40,13 +40,14 @@ $ApiReqFrom = {
 
   # 來源別
   # Src 填固定值:
-  #   /Src     = F    # Src 填固定值? 或由 user 填? 或...?
+  #   /Src = F
   # Src 由 client 填值:
-      Src
+  #   Src, $Tx_Src
+  ${ReqSrc:-}
 }
 $ApiReqBase = {
   $ApiReqFrom
-  Market,    $Tx_Market
+  ${ApiReqBaseMarket:-}    # Market,SessionId: 若不提供給 client 填, 則由 Server 根據商品資料自動填入.
   SessionId, $Tx_SessionId
   UsrDef,    $Tx_UsrDef
   ClOrdId,   $Tx_ClOrdId
@@ -80,23 +81,23 @@ $ApiReqBase = {
 #   例如:ReqUID,Market,SessionId,BrkId,IvacNo,Symbol,Side...
 # }
 $RptOrdKey = {
-  Market
-  SessionId
-  BrkId
-  OrdNo
+  ${RptMarket:-    Market,   $Tx_Market}
+  ${RptSessionId:- SessionId,$Tx_SessionId}
+  BrkId,    $Tx_BrkId	
+  OrdNo,    $Tx_OrdNo
 }
 $RptReqBase = {
-  Kind
-  ReqUID
-  CrTime
+  Kind,   $Tx_Kind
+  ReqUID, $Tx_ReqUID
+  CrTime, $Tx_CrTime
 }
 $RptReqFrom = {
 # SesName
-# Src
-  UserId
-  FromIp
-  UsrDef
-  ClOrdId
+  Src,     $Tx_Src
+  UserId,  $Tx_UserId
+  FromIp,  $Tx_FromIp
+  UsrDef,  $Tx_UsrDef
+  ClOrdId, $Tx_ClOrdId
 }
 # ---------------------------------------------------------
 # 「委託異動」回報, GR 為 RequestSysName(例如: TwsNew, TwsChg, TwsFil...)
@@ -123,27 +124,27 @@ $RptReqFrom = {
 #        CumQty,CumAmt,LastFilledTime
 # }
 $RptOrdSt = {
-  OrdSt
-  ReqSt
-  ErrCode
-  OrdNo
+  OrdSt,   $Tx_OrdSt
+  ReqSt,   $Tx_ReqSt
+  ErrCode, $Tx_ErrCode
+  OrdNo,   $Tx_OrdNo
 }
 $RptOrdMsg = {
-  UpdateTime
-  Message
+  UpdateTime, $Tx_UpdateTime
+  Message,    $Tx_Message
 }
 
 # 一般單腳委託的回報, 若是雙腳(或多腳)單, 則需另外設定.
 $RptOrd1Qty = {
   $RptOrdSt
-  BeforeQty
-  AfterQty
-  LeavesQty
+  BeforeQty, $Tx_BeforeQty
+  AfterQty,  $Tx_AfterQty
+  LeavesQty, $Tx_LeavesQty
   $RptOrdMsg
 }
 $RptOrdCum = {
-  LastFilledTime
-  CumQty
-  CumAmt
+  LastFilledTime, $Tx_LastFilledTime
+  CumQty,         $Tx_CumQty
+  CumAmt,         $Tx_CumAmt
 }
 ###########################################################
