--- a/f9omsrc/forms/ApiEvSesSt.cfg
+++ b/f9omsrc/forms/ApiEvSesSt.cfg
@@ -6,8 +6,8 @@
 # ----------------------------------------------------------------------------
 # OMS事件, 使用回報表格通知.
 RPT.EvSesSt {
-  Time
-  Market
-  SessionId
-  SessionSt
+  Time,      $Tx_Time
+  ${RptMarket:- Market, $Tx_Market}
+  SessionId, $Tx_SessionIdTws
+  SessionSt, $Tx_SessionSt
 }
