--- a/f9omsrc/forms/ApiTwf0Req.cfg
+++ b/f9omsrc/forms/ApiTwf0Req.cfg
@@ -9,7 +9,8 @@ $include: ApiBase.cfg
 # --------------------------------------
 $ApiReqTwf0Base = {
   $ApiReqBase
-  Market,    $Tx_MarketTwf
+# Market,SessionId: 若不提供給 client 填, 則由 Server 根據商品資料自動填入.
+# Market,    $Tx_MarketTwf
   SessionId, $Tx_SessionIdTwf
   BrkId,     $Tx_BrkId
   OrdNo,     $Tx_OrdNo
@@ -26,12 +27,12 @@ $ApiReqTwf0New = {
   # D:專線下單(含VPN、封閉型專屬網路); A:應用程式介面(API)下單;
   # M:行動載具下單;  W:網站(Web Site)下單; P:個人電腦軟體下單;
   # V:語音下單;  G:一般委託下單(書面、電話、電報等方式)
-  OrderSource = A
+  ${ReqOrderSource:- OrderSource = A}
 
   # 行情資訊來源註記
   # - 由行情資訊廠商提供者，填入該行情資訊廠商代碼(詳行情資訊廠商代碼表註);
   # - 由期貨商自行提供行情資訊者，填入 999;
-  InfoSource = 999
+  ${ReqInfoSource:- InfoSource = 999}
 }
 # --------------------------------------
 # 刪改查要求: 必須提供可找回原委託的Key:
@@ -40,5 +41,6 @@ $ApiReqTwf0New = {
 # - Market + SessionId + BrkId + OrdNo
 $ApiReqTwfDcqBase = {
   $ApiReqTwf0Base
+  Market,   $Tx_MarketTwf
   IniSNO,   $Tx_IniSNO
 }
