--- a/f9omsrc/forms/ApiTwf0Rpt.cfg
+++ b/f9omsrc/forms/ApiTwf0Rpt.cfg
@@ -11,9 +11,9 @@ $RptTwf0NewFields = {
   $RptOrdKey
   $RptReqBase
   $RptReqFrom
-  IvacNo
-  SubacNo
-  Symbol
+  IvacNo,  $Tx_IvacNo
+  SubacNo, $Tx_SubacNo
+  Symbol,  $Tx_SymbolTwf
 
 # 若要使用 OmsRcSyn 則必須提供這些欄位給對方 f9oms,
 # 否則對方送出的刪改查, 沒有這些欄位會被期交所斷線?!
