--- a/f9omsrc/forms/ApiTwf1Req.cfg
+++ b/f9omsrc/forms/ApiTwf1Req.cfg
@@ -10,7 +10,10 @@ $include: ApiTwf0Req.cfg
 $ApiReqTwf1New = {
   $ApiReqTwf0New
 
-  IvacNoFlag,  $Tx_IvacNoFlagTwf
+# 若要開放給 client 填入 IvacNoFlag, 則可先定義:
+#     $ReqIvacNoFlagTwf = IvacNoFlag, $Tx_IvacNoFlagTwf
+  ${ReqIvacNoFlagTwf-}
+
   Side,        $Tx_Side
   PosEff,      $Tx_PosEff
   PriType,     $Tx_PriTypeTwf
@@ -22,30 +25,34 @@ $ApiReqTwf1New = {
 # 或提供全部欄位的刪改查:
 # - 若委託已存在則相關欄位(IvacNo、SubacNo、Symb、Side...)必須正確.
 REQ.TwfNew, $Tx_TwfNew {
-  Kind = $RxKind_RequestNew
+  Kind = $RxKind_RequestNew, $Tx_KindNew
   $ApiReqTwf1New
   ${Ex_Req_TwfNew:-}
 }
 
 # 台灣期權回報補單要求.
 # 若輸入的補單回報有誤, 會透過 RPT.TwfRpt : abandon 回覆(SNO=0), 且無法回補.
-REQ.TwfRpt, $Tx_TwfRpt {
-  Kind
-  $ApiReqTwf1New
-  BeforeQty
-  ReportSt = f2   # ExchangeAccepted = 0xf2
-  ErrCode
-  ExgTime
-  ${Ex_Req_TwfRpt:-}
+# 如果不提供補單, 則必須先定義 $ReqTwfRpt = {}
+$ReqTwfRptDef = {
+  REQ.TwfRpt, $Tx_TwfRpt {
+    Kind
+    $ApiReqTwf1New
+    BeforeQty
+    ReportSt = f2   # ExchangeAccepted = 0xf2
+    ErrCode
+    ExgTime
+    ${Ex_Req_TwfRpt:-}
+  }
 }
+${ReqTwfRpt- $ReqTwfRptDef}
 # --------------------------------------
 # 台灣期權 [刪改查] 要求.
 REQ.TwfChg, $Tx_TwfChg {
-  Kind      # 如果 Client 沒填, 則系統根據 Qty、Pri、PriType 自動判斷.
-  Qty,      $Tx_QtyChg
-  Pri
-  PriType
-  TimeInForce
+  ${ReqTwfChgKind- Kind, $Tx_KindChgDefault}  # 如果 Client 沒填, 則系統根據 Qty、Pri、PriType 自動判斷.
+  Qty,         $Tx_QtyChg
+  Pri,         $Tx_Pri
+  PriType,     $Tx_PriTypeTwf
+  TimeInForce, $Tx_TimeInForce
   $ApiReqTwfDcqBase
   ${Ex_Req_TwfChg:-}
 }
