--- a/f9omsrc/forms/ApiTwf1Rpt.cfg
+++ b/f9omsrc/forms/ApiTwf1Rpt.cfg
@@ -29,37 +29,43 @@ $include: ApiTwf0Rpt.cfg
 #
 $RptTwf1IniFields = {
   $RptTwf0NewFields
-  SalesNo
-  Side
-  Pri
-  PriType
-  IniTimeInForce/TimeInForce
+  SalesNo, $Tx_SalesNo
+  Side,    $Tx_Side
+  Pri,     $Tx_Pri
+  PriType, $Tx_PriTypeTwf
+  IniTimeInForce/TimeInForce, $Tx_IniTimeInForce
 }
+
 $RptTwf1NewFields = {
   $RptTwf1IniFields
-  IniPosEff/PosEff
-  IniQty/Qty
+  IniPosEff/PosEff, $Tx_IniPosEff
+  IniQty/Qty,       $Tx_IniQty
 }
+
 RPT.TwfNew : abandon {
   $RptTwf1NewFields
   ErrCode/ = %AbandonErrCode
   Message/ = %AbandonReason
   ${Ex_Rpt_TwfNew_Abandon:-}
 }
-RPT.TwfRpt : abandon {
-  $RptTwf1NewFields
-  ErrCode/ = %AbandonErrCode
-  Message/ = %AbandonReason
-  ${Ex_Rpt_TwfRpt_Abandon:-}
+
+$RptTwfRptAbandon = {
+  RPT.TwfRpt : abandon {
+    $RptTwf1NewFields
+    ErrCode/ = %AbandonErrCode
+    Message/ = %AbandonReason
+    ${Ex_Rpt_TwfRpt_Abandon:-}
+  }
 }
+${ReqTwfRpt- $RptTwfRptAbandon}
 
 $RptTwf1ChgFields = {
   $RptOrdKey
   $RptReqBase
   $RptReqFrom
-  ChgQty    /Qty
-  ChgPri    /Pri
-  ChgPriType/PriType
+  ChgQty    /Qty,     $Tx_ChgQty
+  ChgPri    /Pri,     $Tx_ChgPri
+  ChgPriType/PriType, $Tx_ChgPriType
 }
 RPT.TwfChg : abandon {
   $RptTwf1ChgFields
@@ -85,45 +91,45 @@ RPT.TwfChg {
   ${Ex_Rpt_TwfChg:-}
 }
 RPT.TwfFil {
-  MatchKey
-  MatchTime/Time
-  MatchQty /Qty
-  MatchPri /Pri
-  PriOrd
-  QtyCanceled
-  ErrCode
+  MatchKey,       $Tx_MatchKey 
+  MatchTime/Time, $Tx_MatchTimeTwf
+  MatchQty /Qty,  $Tx_MachtQty
+  MatchPri /Pri,  $Tx_MatchPri
+  PriOrd,         $Tx_PriOrd
+  QtyCanceled,    $Tx_QtyCanceled 
+  ErrCode,        $Tx_ErrCode
   ${Ex_Rpt_TwfFil:-}
 }
 RPT.TwfFil2 {
-  MatchKey
-  MatchTime/Time
-  MatchQty /Qty
-  MatchPri1/Pri
-  MatchPri2/PriLeg2
-  QtyCanceled
-  ErrCode
+  MatchKey,          $Tx_MatchKey
+  MatchTime/Time,    $Tx_MatchTimeTwf
+  MatchQty /Qty,     $Tx_MachtQty
+  MatchPri1/Pri,     $Tx_MatchPri1
+  MatchPri2/PriLeg2, $Tx_MatchPri2
+  QtyCanceled,       $Tx_QtyCanceled  
+  ErrCode,           $Tx_ErrCode 
   ${Ex_Rpt_TwfFil2:-}
 }
 ###########################################################
 $RptTwfOrd1Last = {
-  LastExgTime
-  LastPri
-  LastPriType
-  LastTimeInForce
-  LastPriTime
+  LastExgTime,     $Tx_LastExgTimeTwf
+  LastPri,         $Tx_LastPri
+  LastPriType,     $Tx_LastPriType
+  LastTimeInForce, $Tx_LastTimeInForce
+  LastPriTime,     $Tx_LastPriTimeTwf
 }
 
 RPT.TwfOrd : TwfNew {
   $RptOrd1Qty
   $RptTwfOrd1Last
-  PosEff
+  PosEff, $Tx_PosEff
   ${Ex_Rpt_TwfOrd_All:-}
   ${Ex_Rpt_TwfOrd_TwfNew:-}
 }
 RPT.TwfOrd : TwfRpt {
   $RptOrd1Qty
   $RptTwfOrd1Last
-  PosEff
+  PosEff, $Tx_PosEff
   ${Ex_Rpt_TwfOrd_All:-}
   ${Ex_Rpt_TwfOrd_TwfRpt:-}
 }
@@ -142,8 +148,8 @@ RPT.TwfOrd : TwfFil {
 RPT.TwfOrd : TwfFil2 {
   $RptOrd1Qty
   $RptOrdCum
-  Leg1CumAmt
-  Leg2CumAmt
+  Leg1CumAmt,  $Tx_Leg1CumAmt
+  Leg2CumAmt,  $Tx_Leg2CumAmt
   ${Ex_Rpt_TwfOrd_All:-}
   ${Ex_Rpt_TwfOrd_TwfFil2:-}
 }
