--- a/f9omsrc/forms/ApiTwf7Rpt.cfg
+++ b/f9omsrc/forms/ApiTwf7Rpt.cfg
@@ -23,34 +23,35 @@ RPT.TwfNewQR : abandon {
   Message/ = %AbandonReason
   ${Ex_Rpt_TwfNewQR_Abandon:-}
 }
-RPT.TwfRptQR : abandon {
-  $RptTwf7NewFields
-  ErrCode/ = %AbandonErrCode
-  Message/ = %AbandonReason
-  ${Ex_Rpt_TwfRptQR_Abandon:-}
-}
+#詢價的回報需求極低, 所以只需要回覆TwfNewQR, 沒有必要使用TwfRptQR.
+#RPT.TwfRptQR : abandon {
+#  $RptTwf7NewFields
+#  ErrCode/ = %AbandonErrCode
+#  Message/ = %AbandonReason
+#  ${Ex_Rpt_TwfRptQR_Abandon:-}
+#}
 ###########################################################
 RPT.TwfNewQR {
   $RptTwf7NewFields
   ${Ex_Rpt_TwfNewQR:-}
 }
-RPT.TwfRptQR {
-  $RptTwf7NewFields
-  ${Ex_Rpt_TwfRptQR:-}
-}
+#RPT.TwfRptQR {
+#  $RptTwf7NewFields
+#  ${Ex_Rpt_TwfRptQR:-}
+#}
 ###########################################################
 $RptTwfOrdQR = {
   $RptOrdSt
   $RptOrdMsg
-  LastExgTime
+  LastExgTime, $Tx_LastExgTimeTwf
 }
 RPT.TwfOrdQR : TwfNewQR {
   $RptTwfOrdQR
   ${Ex_Rpt_TwfOrdQR_All:-}
   ${Ex_Rpt_TwfOrdQR_TwfNewQR:-}
 }
-RPT.TwfOrdQR : TwfRptQR {
-  $RptTwfOrdQR
-  ${Ex_Rpt_TwfOrdQR_All:-}
-  ${Ex_Rpt_TwfOrdQR_TwfRptQR:-}
-}
+#RPT.TwfOrdQR : TwfRptQR {
+#  $RptTwfOrdQR
+#  ${Ex_Rpt_TwfOrdQR_All:-}
+#  ${Ex_Rpt_TwfOrdQR_TwfRptQR:-}
+#}
