--- a/f9omsrc/forms/ApiTwf9Rpt.cfg
+++ b/f9omsrc/forms/ApiTwf9Rpt.cfg
@@ -29,15 +29,15 @@ $include: ApiTwf0Rpt.cfg
 #
 $RptTwf9IniFields = {
   $RptTwf0NewFields
-  SalesNo
-  BidPri
-  OfferPri
+  SalesNo,     $Tx_SalesNo
+  BidPri,      $Tx_BidPri
+  OfferPri,    $Tx_OfferPri
   TimeInForce, $Tx_TimeInForceQ
 }
 $RptTwf9NewFields = {
   $RptTwf9IniFields
-  IniBidQty/BidQty
-  IniOfferQty/OfferQty
+  IniBidQty/BidQty,     $Tx_IniBidQty
+  IniOfferQty/OfferQty, $Tx_IniOfferQty
 }
 
 RPT.TwfNewQ : abandon {
@@ -46,19 +46,22 @@ RPT.TwfNewQ : abandon {
   Message/ = %AbandonReason
   ${Ex_Rpt_TwfNewQ_Abandon:-}
 }
-RPT.TwfRptQ : abandon {
-  $RptTwf9NewFields
-  ErrCode/ = %AbandonErrCode
-  Message/ = %AbandonReason
-  ${Ex_Rpt_TwfRptQ_Abandon:-}
+$RptTwfRptQAbandon = {
+  RPT.TwfRptQ : abandon {
+    $RptTwf9NewFields
+    ErrCode/ = %AbandonErrCode
+    Message/ = %AbandonReason
+    ${Ex_Rpt_TwfRptQ_Abandon:-}
+  }
 }
+${ReqTwfRpt- $RptTwfRptQAbandon}
 
 $RptTwf9ChgFields = {
   $RptOrdKey
   $RptReqBase
   $RptReqFrom
-  ChgBidQty   /BidQty
-  ChgOfferQty /OfferQty
+  ChgBidQty   /BidQty,   $Tx_ChgBidQty
+  ChgOfferQty /OfferQty, $Tx_ChgOfferQty
 }
 RPT.TwfChgQ : abandon {
   $RptTwf9ChgFields
@@ -84,11 +87,11 @@ RPT.TwfChgQ {
 
 # 與一般單的成交回報相同, 但多了一個 Side 欄位.
 RPT.TwfFil {
-  MatchKey
-  MatchTime/Time
-  MatchQty /Qty
-  MatchPri /Pri
-  MatchSide/Side
+  MatchKey,       $Tx_MatchKey
+  MatchTime/Time, $Tx_MatchTime
+  MatchQty /Qty,  $Tx_MachtQty
+  MatchPri /Pri,  $Tx_MatchPri
+  MatchSide/Side, $Tx_MatchSide
   ${Ex_Rpt_TwfFil:-}
 }
 
@@ -96,19 +99,19 @@ RPT.TwfFil {
 $RptTwfOrd9Qty = {
   $RptOrdSt
   ReportSide
-  BidBeforeQty
-  BidAfterQty
-  BidLeavesQty
-  OfferBeforeQty
-  OfferAfterQty
-  OfferLeavesQty
+  BidBeforeQty,   $Tx_BidBeforeQty
+  BidAfterQty,    $Tx_BidAfterQty
+  BidLeavesQty,   $Tx_BidLeavesQty
+  OfferBeforeQty, $Tx_OfferBeforeQty
+  OfferAfterQty,  $Tx_OfferAfterQty
+  OfferLeavesQty, $Tx_OfferLeavesQty
   $RptOrdMsg
 }
 $RptTwfOrd9Last = {
-  LastExgTime
-  LastPriTime
-  LastBidPri
-  LastOfferPri
+  LastExgTime, $Tx_LastExgTimeTwf
+  LastPriTime, $Tx_LastPriTimeTwf
+  LastBidPri,  $Tx_LastBidPri
+  LastOfferPri,$Tx_LastOfferPri
 }
 
 RPT.TwfOrdQ : TwfNewQ {
@@ -131,11 +134,11 @@ RPT.TwfOrdQ : TwfChgQ {
 }
 RPT.TwfOrdQ : TwfFil {
   $RptTwfOrd9Qty
-  LastFilledTime
-  BidCumQty
-  BidCumAmt
-  OfferCumQty
-  OfferCumAmt
+  LastFilledTime, $Tx_LastFilledTimeTwf
+  BidCumQty,      $Tx_BidCumQty
+  BidCumAmt,      $Tx_BidCumAmt
+  OfferCumQty,    $Tx_OfferCumQty
+  OfferCumAmt,    $Tx_OfferCumAmt
   ${Ex_Rpt_TwfOrdQ_All:-}
   ${Ex_Rpt_TwfOrdQ_TwfFil:-}
 }
