--- a/f9omsrc/forms/ApiTwsReq.cfg
+++ b/f9omsrc/forms/ApiTwsReq.cfg
@@ -21,38 +21,45 @@ $ApiReqTwsNew = {
 
   IvacNo,      $Tx_IvacNo
   SubacNo,     $Tx_SubacNo
-  IvacNoFlag,  $Tx_IvacNoFlagTws
+
+# 若要開放給 client 填入 IvacNoFlag, 則可先定義:
+#     $ReqIvacNoFlagTws = IvacNoFlag, $Tx_IvacNoFlagTws
+  ${ReqIvacNoFlagTws-}
 
   Side,        $Tx_Side
-  OType,       $Tx_OType
+  OType=0,     $Tx_OType
   Symbol,      $Tx_SymbolTws
   PriType,     $Tx_PriTypeTws
   Pri,         $Tx_Pri
   Qty,         $Tx_QtyTws
   TimeInForce, $Tx_TimeInForce
 
-  VaTimeMS,    $Tx_VaTimeMS
+# VaTimeMS,    $Tx_VaTimeMS
 }
 # 台灣證券新單要求.
 # 或提供全部欄位的刪改查:
 # - 若委託已存在則相關欄位(IvacNo、SubacNo、Symb、Side...)必須正確.
 REQ.TwsNew, $Tx_TwsNew {
-  Kind = $RxKind_RequestNew
+  /Kind = $RxKind_RequestNew
   $ApiReqTwsNew
   ${Ex_Req_TwsNew:-}
 }
 
 # 台灣證券回報補單要求.
 # 若輸入的補單回報有誤, 會透過 RPT.TwsRpt : abandon 回覆(SNO=0), 且無法回補.
-REQ.TwsRpt, $Tx_TwsRpt {
-  Kind
-  $ApiReqTwsNew
-  BeforeQty
-  ReportSt = f2   # ExchangeAccepted = 0xf2
-  ErrCode
-  ExgTime
-  ${Ex_Req_TwsRpt:-}
+$ReqTwsRptEn = {
+  REQ.TwsRpt, $Tx_TwsRpt {
+    Kind
+    $ApiReqTwsNew
+    BeforeQty
+    ReportSt = f2   # ExchangeAccepted = 0xf2
+    ErrCode
+    ExgTime
+    ${Ex_Req_TwsRpt:-}
+  }
 }
+# 如果不提供補單, 則必須先定義 $ReqTwsRpt = {}
+${ReqTwsRpt- $ReqTwsRptEn}
 # --------------------------------------
 # 刪改查要求: 必須提供可找回原委託的Key:
 # - IniSNO
@@ -64,10 +71,11 @@ $ApiReqTwsDcq = {
 }
 # 台灣證券 [刪改查] 要求.
 REQ.TwsChg, $Tx_TwsChg {
-  Kind      # 如果 Client 沒填, 則系統根據 Qty、Pri、PriType 自動判斷.
+  # 如果 Client 沒填 Kind, 則系統根據 Qty、Pri、PriType 自動判斷.
+  ${ReqTwsChgKind:-Kind}
   Qty,      $Tx_QtyChg
-  PriType
-  Pri
+# PriType   # 台股: 只能只能[限價]改成[限價], 所以不需要填 PriType;
+  Pri,      $Tx_Pri
   $ApiReqTwsDcq
   ${Ex_Req_TwsChg:-}
 }
