--- a/f9omsrc/forms/ApiTwsRpt.cfg
+++ b/f9omsrc/forms/ApiTwsRpt.cfg
@@ -30,85 +30,95 @@ $RptTwsIniFields = {
   $RptOrdKey
   $RptReqBase
   $RptReqFrom
-  IvacNo
-  SubacNo
-  SalesNo
-  Side
-  Symbol
-  Pri
-  PriType
-  TimeInForce
+  IvacNo,      $Tx_IvacNo
+  SubacNo,     $Tx_SubacNo
+  SalesNo,     $Tx_SalesNo
+  Side,        $Tx_Side
+  Symbol,      $Tx_SymbolTws
+  Pri,         $Tx_Pri
+  PriType,     $Tx_PriTypeTws
+  TimeInForce, $Tx_TimeInForce
 }
+
 $RptTwsNewFields = {
   $RptTwsIniFields
-  IniOType/OType
-  IniQty/Qty
+  IniOType/OType, $Tx_IniOTypeTws
+  IniQty/Qty,     $Tx_IniQty
 }
+
 RPT.TwsNew : abandon {
   $RptTwsNewFields
-  ErrCode/ = %AbandonErrCode
-  Message/ = %AbandonReason
+  ErrCode/ = %AbandonErrCode, $Tx_ErrCode
+  Message/ = %AbandonReason,  $Tx_Message
   ${Ex_Rpt_TwsNew_Abandon:-}
 }
-RPT.TwsRpt : abandon {
-  $RptTwsNewFields
-  ErrCode/ = %AbandonErrCode
-  Message/ = %AbandonReason
-  ${Ex_Rpt_TwsRpt_Abandon:-}
+
+$ReqTwsRptAbandonEn = {
+  RPT.TwsRpt : abandon {
+    $RptTwsNewFields
+    ErrCode/ = %AbandonErrCode
+    Message/ = %AbandonReason
+    ${Ex_Rpt_TwsRpt_Abandon:-}
+  }
 }
+${ReqTwsRpt- $ReqTwsRptAbandonEn}
 
 $RptTwsChgFields = {
   $RptOrdKey
   $RptReqBase
   $RptReqFrom
-  ChgQty    /Qty
-  ChgPri    /Pri
-  ChgPriType/PriType
+  ChgQty    /Qty, $Tx_ChgQty 
+  ChgPri    /Pri, $Tx_ChgPri
+# ChgPriType/PriType
 }
+
 RPT.TwsChg : abandon {
   $RptTwsChgFields
-  ErrCode/ = %AbandonErrCode
-  Message/ = %AbandonReason
+  ErrCode/ = %AbandonErrCode, $Tx_ErrCode
+  Message/ = %AbandonReason,  $Tx_Message
   ${Ex_Rpt_TwsChg_Abandon:-}
 }
 ###########################################################
-RPT.TwsNew {
+RPT.TwsNew, $Tx_TwsNewAck {
   $RptTwsNewFields
   ${Ex_Rpt_TwsNew:-}
 }
+
 RPT.TwsRpt {
   $RptTwsIniFields  
-  BeforeQty
-  AfterQty/Qty
+  BeforeQty,    $Tx_BeforeQty
+  AfterQty/Qty, $Tx_AfterQty
   IniOType/= %IniField:OType
   IniQty  /= %IniField:Qty
   ${Ex_Rpt_TwsRpt:-}
 }
-RPT.TwsChg {
+
+RPT.TwsChg, $Tx_TwsChgAck {
   $RptTwsChgFields
   ${Ex_Rpt_TwsChg:-}
 }
-RPT.TwsFil {
-  MatchKey
-  MatchTime/Time
-  MatchPri /Pri
-  MatchQty /Qty
+RPT.TwsFil, $Tx_TwsFilRpt {
+  MatchKey,       $Tx_MatchKey
+  MatchTime/Time, $Tx_MatchTimeTws
+  MatchPri /Pri,  $Tx_MatchPri
+  MatchQty /Qty,  $Tx_MachtQty
   ${Ex_Rpt_TwsFil:-}
 }
 ###########################################################
 RPT.TwsOrd : TwsNew {
   $RptOrd1Qty
-  OType
-  LastExgTime
-  LastPri
-  LastPriType
-  LastPriTime
+  OType,       $Tx_OType
+  LastExgTime, $Tx_LastExgTimeTws
+  LastPri,     $Tx_LastPri
+  LastPriType, $Tx_LastPriType
+  LastPriTime, $Tx_LastPriTimeTws
   ${Ex_Rpt_TwsOrd_All:-}
   ${Ex_Rpt_TwsOrd_TwsNew:-}
 }
+
 RPT.TwsOrd : TwsRpt {
   $RptOrd1Qty
-  OType
+  OType, $Tx_OType
   LastExgTime
   LastPri
   LastPriType
@@ -116,20 +126,21 @@ RPT.TwsOrd : TwsRpt {
   ${Ex_Rpt_TwsOrd_All:-}
   ${Ex_Rpt_TwsOrd_TwsRpt:-}
 }
+
 RPT.TwsOrd : TwsChg {
   $RptOrd1Qty
-  LastExgTime
-  LastPri
-  LastPriType
-  LastPriTime
+  LastExgTime, $Tx_LastExgTimeTws
+  LastPri,     $Tx_LastPri
+  LastPriType, $Tx_LastPriType
+  LastPriTime, $Tx_LastPriTimeTws
   ${Ex_Rpt_TwsOrd_All:-}
   ${Ex_Rpt_TwsOrd_TwsChg:-}
-  IniClOrdId/ = %IniField:ClOrdId
+# IniClOrdId/ = %IniField:ClOrdId
 }
 RPT.TwsOrd : TwsFil {
   $RptOrd1Qty
   $RptOrdCum
   ${Ex_Rpt_TwsOrd_All:-}
   ${Ex_Rpt_TwsOrd_TwsFil:-}
-  IniClOrdId/ = %IniField:ClOrdId
+# IniClOrdId/ = %IniField:ClOrdId
 }
