--- a/f9omsrc/forms/Api_zh.cfg
+++ b/f9omsrc/forms/Api_zh.cfg
@@ -1,5 +1,5 @@
 ﻿#
-# ApiAll_zh.cfg
+# Api_zh.cfg
 #
 # API設定檔,翻譯檔: 中文正體
 #
@@ -14,6 +14,10 @@ $Tx_TwsChg        = 台股刪改查
 $Tx_TwsDelete     = 台股刪單
 $Tx_TwsQuery      = 台股查詢
 $Tx_TwsRpt        = 台股回報
+$Tx_TwsNewAck     = 台股新單Ack     # RPT.TwsNew
+$Tx_TwsChgAck     = 台股改單Ack     # RPT.TwsChg
+$Tx_TwsFilRpt     = 台股成交回報    # RPT.TwsFil
+
 
 $Tx_MarketTws     = $Tx_Market,     {T=台灣上市,O=台灣上櫃,E=台灣興櫃}
 $Tx_SessionIdTws  = $Tx_SessionId,  {N=一般,F=盤後定價,O=零股}
@@ -41,9 +45,9 @@ $Tx_TwfRptQ       = 台期權報價回報
 
 $Tx_MarketTwf     = $Tx_Market,     {f=期貨,o=選擇權}
 $Tx_SessionIdTwf  = $Tx_SessionId,  {N=日盤,A=夜盤}
-$Tx_IvacNoFlagTwf = 投資人身分碼,   {0=本國法人,1=本國自然人}
+$Tx_IvacNoFlagTwf = 投資人身分碼,   {0=本國法人,1=本國自然人,2=自營,8=造市}
 $Tx_SymbolTwf     = 商品代號
-$Tx_PriTypeTwf    = 價格別,         {=限價,M=市價,m=一定範圍內市價}
+$Tx_PriTypeTwf    = 價格別,         {L=限價,M=市價,m=一定範圍內市價}
 $Tx_QtyTwf        = 數量,           口數
 $Tx_PosEff        = 開平倉,         {O=Open,C=Close,D=DayTrade,9=Quote,A=選擇權新倉含指定部位沖銷,7=代沖銷}
 # ----------
@@ -52,12 +56,100 @@ $Tx_ClOrdId       = 自訂Id,         使用者自訂Id,任意文數字
 $Tx_BrkId         = 券商代號
 $Tx_IvacNo        = 投資人帳號,     投資人帳號含檢查碼
 $Tx_SubacNo       = 子帳
-$Tx_OType         = 資券現,         {0=現,d=現沖,1=代資,2=代券,3=自資,4=自券,5=券5,6=券6}  # 1=代辦融資,2=代辦融券,3=自辦融資,4=自辦融券
+$Tx_OType         = 委託類別,       {0=現,d=現沖,1=代資,2=代券,3=自資,4=自券,5=券5,6=券6}  # 1=代辦融資,2=代辦融券,3=自辦融資,4=自辦融券
+$Tx_IniOTypeTws   = 原始類別
 $Tx_Side          = 買賣別,         {B=買進,S=賣出}
 $Tx_Pri           = 價格
-$Tx_QtyChg        = 數量,           '=0:刪單,<0:刪減數量,>0:改後數量'
+$Tx_QtyChg        = 數量,           '=0:刪單,<0:刪減數量,>0:含成交改後數量'
 $Tx_OrdNo         = 委託書號
 $Tx_IniSNO        = 初始序號,       刪改查要操作的初始下單序號(各主機自編的序號)
 $Tx_TimeInForce   = 時間條件,       {=當日有效,I=IOC,F=FOK}
 $Tx_TimeInForceQ  = 時間條件,       {=當日有效,8=期交所定時刪除}
 $Tx_VaTimeMS      = 有效執行時間,   從「收到下單要求」到「要送出」時,若超過時間(單位:ms),則拒絕送出
+$Tx_Src           = 來源別
+$Tx_IniClOrdId    = 原始ClOrdId
+# -------------
+$Tx_KindNew       = 交易指令,       {N=新單, 內定值 N}
+$Tx_KindChgTwfCond= 改單指令,       {D=刪單,C=減量,P=改價,Q=期交所查詢,c=修改觸發價}
+$Tx_KindChgDefault= 改單指令,       {=自動,C=改量,P=改價,Q=查詢}
+$Tx_Kind          = 交易指令
+
+$Tx_SalesNo       = 營業員代號
+$Tx_SalesNoTraderId = 營業員代號, 填入 TraderID
+
+$Tx_IniPosEff     = 原始倉別
+$Tx_IniQty        = 原始數量
+$Tx_IniTimeInForce= 原始時間條件
+$Tx_ChgQty        = 改單量
+$Tx_ChgPri        = 改單價
+$Tx_ChgPriType    = 改單價格別
+$Tx_UserId        = 使用者
+$Tx_FromIp        = 來源
+$Tx_ReqUID        = 序號
+$Tx_OrdSt         = 委託狀態
+$Tx_ReqSt         = 要求狀態
+$Tx_CrTime        = 建單時間(UTC)
+$Tx_UpdateTime    = 更新時間(UTC)
+$Tx_ErrCode       = 錯誤代碼
+$Tx_Message       = 訊息
+$Tx_BeforeQty     = 改前量
+$Tx_AfterQty      = 改後量        
+$Tx_LeavesQty     = 剩餘量
+$Tx_LastFilledTimeTwf= 最後成交時間(UTC)
+$Tx_LastFilledTimeTws= 最後成交時間
+$Tx_LastFilledTime   = 最後成交時間
+$Tx_CumQty        = 總成交量
+$Tx_CumAmt        = 總成交金額
+$Tx_LastExgTimeTwf= 最後時間(UTC)
+$Tx_LastExgTimeTws= 最後時間
+$Tx_MatchKey      = 成交序號
+$Tx_MatchTimeTwf  = 成交時間(UTC)
+$Tx_MatchTimeTws  = 成交時間
+$Tx_MachtQty      = 成交量
+$Tx_MatchPri      = 成交價
+$Tx_PriOrd        = 委託價或基準價
+$Tx_MatchPri1     = Leg1成交價
+$Tx_MatchPri2     = Leg2成交價
+$Tx_LastPri       = 最後價
+$Tx_LastPriType   = 最後價格別
+$Tx_LastTimeInForce= 最後時間條件
+$Tx_LastPriTimeTwf= 最後價格時間(UTC)
+$Tx_LastPriTimeTws= 最後價格時間
+$Tx_Leg1CumAmt    = Leg1總成交金額
+$Tx_Leg2CumAmt    = Leg2總成交金額
+$Tx_MatchSide     = 成交買賣別
+# -------------
+$Tx_IniBidQty     = 原始報買量
+$Tx_IniOfferQty   = 原始報賣量
+$Tx_BidQty        = 報買量
+$Tx_OfferQty      = 報賣量
+$Tx_BidPri        = 報買價
+$Tx_OfferPri      = 報賣價
+$Tx_ChgBidQty     = 改報買量
+$Tx_ChgOfferQty   = 改報賣量
+$Tx_BidBeforeQty  = 報買前量
+$Tx_BidAfterQty   = 報買後量
+$Tx_BidLeavesQty  = 報買剩餘量
+$Tx_OfferBeforeQty= 報賣前量
+$Tx_OfferAfterQty = 報賣後量
+$Tx_OfferLeavesQty= 報賣剩餘量
+$Tx_LastBidPri    = 現報買價
+$Tx_LastOfferPri  = 現報賣價
+$Tx_BidCumQty     = 總報買成交
+$Tx_OfferCumQty   = 總報賣成交
+$Tx_BidCumAmt     = 總報買成交額
+$Tx_OfferCumAmt   = 總報賣成交額
+$Tx_QtyCanceled   = 取消量
+# ----------
+$Tx_OutPvcId      = Session ID
+# ----------
+$Tx_CondPri       = 觸發價
+$Tx_CondOp        = 條件運算子,     {==, !=, >, >=, <, <=}
+# ----------
+$Tx_RequireQty    = 要求量
+$Tx_ChildLeavesQty= 子單剩餘量
+# ----------
+$Tx_Time          = 時間
+$Tx_SessionSt     = 盤別狀態
+# ----------
+$Tx_ScBalance     = 剩餘額度
