--- a/f9omsrc/forms/ApiTwf9Req.cfg
+++ b/f9omsrc/forms/ApiTwf9Req.cfg
@@ -10,43 +10,46 @@ $include: ApiTwf0Req.cfg
 $ApiReqTwf9New = {
   $ApiReqTwf0New
 
-  IvacNoFlag,  $Tx_IvacNoFlagTwf
-  BidPri
-  BidQty
-  OfferPri
-  OfferQty
-  TimeInForce, $Tx_TimeInForce
+  IvacNoFlag=9, $Tx_IvacNoFlagTwf
+  BidPri,       $Tx_BidPri
+  BidQty,       $Tx_BidQty
+  OfferPri,     $Tx_OfferPri
+  OfferQty,     $Tx_OfferQty
+  TimeInForce,  $Tx_TimeInForceQ
 }
 # 台灣期權新單要求.
 # 或提供全部欄位的刪改查:
 # - 若委託已存在則相關欄位(IvacNo、SubacNo、Symb、Side...)必須正確.
 REQ.TwfNewQ, $Tx_TwfNewQ {
-  Kind = $RxKind_RequestNew
+  Kind = $RxKind_RequestNew, $Tx_KindNew
   $ApiReqTwf9New
   ${Ex_Req_TwfNewQ:-}
 }
 
 # 台灣期權回報補單要求.
 # 若輸入的補單回報有誤, 會透過 RPT.TwfRptQ : abandon 回覆(SNO=0), 且無法回補.
-REQ.TwfRptQ, $Tx_TwfRptQ {
-  Kind
-  $ApiReqTwf9New
-  ReportSt = f2   # ExchangeAccepted = 0xf2
-  ErrCode
-  ExgTime
-  Side
-  BidBeforeQty
-  OfferBeforeQty  
-  ${Ex_Req_TwfRptQ:-}
+$ReqTwfRptQ = {
+  REQ.TwfRptQ, $Tx_TwfRptQ {
+    Kind
+    $ApiReqTwf9New
+    ReportSt = f2   # ExchangeAccepted = 0xf2
+    ErrCode
+    ExgTime
+    Side
+    BidBeforeQty
+    OfferBeforeQty  
+    ${Ex_Req_TwfRptQ:-}
+  }
 }
+${ReqTwfRpt- $ReqTwfRptQ}
 # --------------------------------------
 # 台灣期權報價 [刪改查] 要求.
 REQ.TwfChgQ, $Tx_TwfChg {
-  Kind      # 如果 Client 沒填, 則系統根據 Qty 自動判斷.
-  BidQty
-  OfferQty
-  BidPri
-  OfferPri
+  Kind,     $Tx_KindChgDefault   # 如果 Client 沒填, 則系統根據 Qty 自動判斷.
+  BidQty,   $Tx_BidQty
+  OfferQty, $Tx_OfferQty
+  BidPri,   $Tx_BidPri
+  OfferPri, $Tx_OfferPri
   $ApiReqTwfDcqBase
   ${Ex_Req_TwfChgQ:-}
 }
