OmsRcApi: RPT.*Ord 增加 IniSNO;

--- a/f9omsrc/forms/ApiBase.cfg
+++ b/f9omsrc/forms/ApiBase.cfg
@@ -128,6 +128,7 @@ $RptOrdSt = {
   ReqSt,   $Tx_ReqSt
   ErrCode, $Tx_ErrCode
   OrdNo,   $Tx_OrdNo
+  IniSNO/= %IniSNO, $Tx_RptIniSNO
 }
 $RptOrdMsg = {
   UpdateTime, $Tx_UpdateTime
