Add: 不同 LineGroup 裡面 [同類TradingLineManage] 相互支援機制資; 用 Lg 的 Description 裡面的「Helper=」設定;

--- a/f9omstw/CMakeLists.txt
+++ b/f9omstw/CMakeLists.txt
@@ -16,6 +16,7 @@ set(f9omstw_src
  OmsScBase.cpp
  OmsTradingLineMgr.cpp
  OmsTradingLineMgrCfg.cpp
+ OmsTradingLineHelper1.cpp
  OmsImporter.cpp
  OmsIoSessionFactory.cpp
 
