子母單的預設櫃號 gChildRequestTgId, gParentRequestTgId 移到 OmsCoreMgr; 增加 OmsOrdTeamIdConfigSeed 處理櫃號設定.

--- a/f9omstw/CMakeLists.txt
+++ b/f9omstw/CMakeLists.txt
@@ -11,6 +11,7 @@ set(f9omstw_src
  OmsBackend.cpp
  OmsBackendRecorder.cpp
  OmsOrdTeam.cpp
+ OmsOrdTeamIdConfig.cpp
  OmsOrdNoMap.cpp
  OmsErrCodeAct.cpp
  OmsScBase.cpp
