調整部分註解。配合調整: fon9::fmkt::TradingLineManager 事件, 使用不同 fn 區分 Helper 或 Line;

--- a/OmsErrCode/OmsErrCode.40xxx.cfg
+++ b/OmsErrCode/OmsErrCode.40xxx.cfg
@@ -127,6 +127,6 @@
 40240 = session exceeds the flow limit                     | 該 session 超過設定之流量值
 40241 = a session exceeds flow limit continuously, system will lock this session for a period of time. | 該 session 於連續時間內都超過設定之流量值，本公司將自動暫停收單一段時間
 40242 = The difference between msg_time of R01/R31 and TAIFEX trading system's R01/R31 receiving time is larger than "cancel_order_sec" value. This order will be rejected. TAIFEX will not check status_code=242 when ExecType=4 | 委託下單的時間與本公司收到的時間差異大於 L040 cancel_order_sec欄位所設定之秒數，則該委託單將被退回不允許進入系統(當ExecType=4 時，不檢查status_code=242)
-40248 = session reach 80% of the flow limit. This is a warning. | 警告該 session 以達設定之流量值80%
-40249 = session reach 90% of the flow limit. This is a warning. | 警告該 session 以達設定之流量值90%
+40248 = session reach 80% of the flow limit. This is a warning. | 警告該 session 已達設定之流量值80%
+40249 = session reach 90% of the flow limit. This is a warning. | 警告該 session 已達設定之流量值90%
 40250 = The difference between msg_time of R01/R31 and TAIFEX trading system's R01/R31 receiving time is larger than 2 seconds. This is a warning. | 警告委託下單的時間與期交所收到的時間差異大於 2 秒
