[遠端支援繞送(轉送下單要求)] 的底層支援.

--- a/OmsErrCode/OmsErrCode.00xxx.cfg
+++ b/OmsErrCode/OmsErrCode.00xxx.cfg
@@ -49,6 +49,14 @@
 00505 = OrdNoMap not found              | 委託書號對照表沒找到,可能是 MarketId 或 SessionId 不正確,或系統沒設定
 00506 = OrdTeam deny                    | 無此委託櫃號權限
 
+00600 =                                 | 請求 [主機{:AskToRemote:}] 協助繞送
+# 由繞送的接收端負責處理此錯誤.
+00601 =                                 | 回報回補時才發現繞進請求
+# 由繞送的請求端負責處理此錯誤.
+00602 =                                 | 回報回補時才發現繞送退單
+00610 =                                 | 繞送接收端,無可用線路
+00611 =                                 | 繞送接收端,忙碌中
+
 00900 = No ready line                   | 無可用的下單連線:{:Lg:}
 00901 = The order has expired           | 下單要求過期了
 00902 = Line broken rejected            | 送出後斷線,且未送達交易所
